@@ -186,8 +186,15 @@ namespace comexbase
 		/// </summary>
 		public void CloseConnection ()
 		{
+			// Get status:
+			//string retStatusResp = "";
+			//string retStatus = ReaderStatus(ref retStatusResp);
+			
+			//log.Debug("READER_STATE: " + readerState.ToString("X4"));
+			
 			// Disconnect from smartcard
-			SCardDisconnect(nCard, SCARD_UNPOWER_CARD);
+			//SCardDisconnect(nCard, SCARD_UNPOWER_CARD);
+			SCardDisconnect(nCard, (uint)SCARD_DISPOSITION.SCARD_RESET_CARD);
 			nCard = IntPtr.Zero;
 		}
 		
