@@ -1,3 +1,10 @@
+2011-10-04  Armando Basile  <hmandevteam@gmail.com>
+
+	* PcscReader.cs:
+	* AssemblyInfo.cs:
+	* PcscReader.IReader.cs: - changed PCSC Disconnect action from
+	UNPOWER to RESER
+
 2011-09-29  Armando Basile  <hmandevteam@gmail.com>
 
 	* comex-base.csproj:
